--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -12,4 +12,4 @@ jobs:
           python-version: 3.8
       - uses: isort/isort-action@v0.1.0
         with:
-          configuration: "--profile black --line-length 125 --skip-glob tools/LOOT/yaml/*"
+          configuration: "--profile black --line-length 125 --skip-glob LOOT-Warning-Checker/tools/LOOT/yaml/*"
