Escape backslashes in condition strings

--- a/manifest.json
+++ b/manifest.json
@@ -97,6 +97,19 @@
       "ReleaseNotes": [
         "Fixed incorrect parsing of single quotes in LOOT condition strings"
       ]
+    },
+    {
+      "Version": "1.1.5-beta",
+      "Released": "2022-02-08",
+      "MinSupport": "2.4.3",
+      "MaxSupport": "2.4.4",
+      "DownloadUrl": "https://github.com/JonathanFeenstra/modorganizer-loot-warning-checker/releases/download/v1.1.5-beta/LOOT-Warning-Checker-v1.1.5-beta.zip",
+      "PluginPath": [
+        "LOOT-Warning-Checker"
+      ],
+      "ReleaseNotes": [
+        "Fixed escaping of backslashes in LOOT condition strings"
+      ]
     }
   ]
 }
