Update LOOT masterlist version to v0.18

--- a/manifest.json
+++ b/manifest.json
@@ -110,6 +110,19 @@
       "ReleaseNotes": [
         "Fixed escaping of backslashes in LOOT condition strings"
       ]
+    },
+    {
+      "Version": "1.2.0-beta",
+      "Released": "2022-03-08",
+      "MinSupport": "2.4.3",
+      "MaxSupport": "2.4.4",
+      "DownloadUrl": "https://github.com/JonathanFeenstra/modorganizer-loot-warning-checker/releases/download/v1.2.0-beta/LOOT-Warning-Checker-v1.2.0-beta.zip",
+      "PluginPath": [
+        "LOOT-Warning-Checker"
+      ],
+      "ReleaseNotes": [
+        "Update LOOT masterlist version to v0.18"
+      ]
     }
   ]
 }
