Update masterlist directory path

--- a/manifest.json
+++ b/manifest.json
@@ -123,6 +123,19 @@
       "ReleaseNotes": [
         "Update LOOT masterlist version to v0.18"
       ]
+    },
+    {
+      "Version": "1.2.1-beta",
+      "Released": "2022-03-21",
+      "MinSupport": "2.4.3",
+      "MaxSupport": "2.4.4",
+      "DownloadUrl": "https://github.com/JonathanFeenstra/modorganizer-loot-warning-checker/releases/download/v1.2.1-beta/LOOT-Warning-Checker-v1.2.1-beta.zip",
+      "PluginPath": [
+        "LOOT-Warning-Checker"
+      ],
+      "ReleaseNotes": [
+        "Update masterlist directory path"
+      ]
     }
   ]
 }
