Hotfix: Fix toggle plugin not working

--- a/manifest.json
+++ b/manifest.json
@@ -166,6 +166,22 @@
       "DataPath": [
         "data/LOOT Warning Checker"
       ]
+    },
+    {
+      "Version": "1.2.4-beta",
+      "Released": "2023-04-29",
+      "MinSupport": "2.4.3",
+      "MaxSupport": "2.4.4",
+      "DownloadUrl": "https://github.com/JonathanFeenstra/modorganizer-loot-warning-checker/releases/download/v1.2.4-beta/LOOT-Warning-Checker-v1.2.4-beta.zip",
+      "PluginPath": [
+        "LOOT-Warning-Checker"
+      ],
+      "ReleaseNotes": [
+        "Hotfix: Fix toggle plugin not working"
+      ],
+      "DataPath": [
+        "data/LOOT Warning Checker"
+      ]
     }
   ]
 }
