--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           echo "EOF" >> $env:GITHUB_ENV
       - run: |
           echo "RELEASE_NOTES<<EOF" >> $env:GITHUB_ENV
-          echo $env:RELEASE_NOTES -split "\n" | foreach {"* " + $_} >> $env:GITHUB_ENV
+          echo $env:RELEASE_NOTES | foreach {"* " + $_} >> $env:GITHUB_ENV
           echo "EOF" >> $env:GITHUB_ENV
         if: ${{ env.RELEASE_NOTES }} =~ '*\n*'
       - name: Zip
