--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
         with:
-            python-version: 3.8
+            python-version: "3.11"
       - uses: psf/black@stable
         with:
           black_args: ". --check"
