--- a/manifest.json
+++ b/manifest.json
@@ -250,6 +250,19 @@
       "DataPath": [
         "data/LOOT Warning Checker"
       ]
+    },
+    {
+      "Version": "1.3.0-rc2",
+      "Released": "2023-12-07",
+      "MinSupport": "2.5.0",
+      "MaxSupport": "2.5.0",
+      "DownloadUrl": "https://github.com/JonathanFeenstra/modorganizer-loot-warning-checker/releases/download/v1.3.0-rc2/LOOT-Warning-Checker-v1.3.0-rc2.zip",
+      "PluginPath": [
+        "LOOT-Warning-Checker"
+      ],
+      "ReleaseNotes": [
+        "Update the valid form ID range for light plugins in Skyrim SE and Fallout 4 via esplugin"
+      ]
     }
   ]
 }
