--- a/manifest.json
+++ b/manifest.json
@@ -263,6 +263,19 @@
       "ReleaseNotes": [
         "Update the valid form ID range for light plugins in Skyrim SE and Fallout 4 via esplugin"
       ]
+    },
+    {
+      "Version": "1.3.0-rc3",
+      "Released": "2024-01-04",
+      "MinSupport": "2.5.0",
+      "MaxSupport": "2.5.0",
+      "DownloadUrl": "https://github.com/JonathanFeenstra/modorganizer-loot-warning-checker/releases/download/v1.3.0-rc3/LOOT-Warning-Checker-v1.3.0-rc3.zip",
+      "PluginPath": [
+        "LOOT-Warning-Checker"
+      ],
+      "ReleaseNotes": [
+        "Fix xEdit path selection dialog using PyQt5 APIs that are no longer available in PyQt6"
+      ]
     }
   ]
 }
