--- a/manifest.json
+++ b/manifest.json
@@ -276,6 +276,19 @@
       "ReleaseNotes": [
         "Fix xEdit path selection dialog using PyQt5 APIs that are no longer available in PyQt6"
       ]
+    },
+    {
+      "Version": "1.3.0-rc4",
+      "Released": "2024-02-21",
+      "MinSupport": "2.5.0",
+      "MaxSupport": "2.5.0",
+      "DownloadUrl": "https://github.com/JonathanFeenstra/modorganizer-loot-warning-checker/releases/download/v1.3.0-rc4/LOOT-Warning-Checker-v1.3.0-rc4.zip",
+      "PluginPath": [
+        "LOOT-Warning-Checker"
+      ],
+      "ReleaseNotes": [
+        "Improve product version comparisons in LOOT condition strings"
+      ]
     }
   ]
 }
